# hermetic-python-magic

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pdm_build.py  pyproject.toml
.github/workflows/: release.yaml
patches/: loader.py
